Update EmailJS public key and service/template IDs

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script>
         (function() {
             // GANTI DENGAN PUBLIC KEY EMAILJS ANDA
-            emailjs.init("7rmzf-TOrWPeANPLM"); 
+            emailjs.init("VNZpeDEjvr0dyRe9r"); 
         })();
     </script>
 
@@ -121,7 +121,7 @@
             button.disabled = true;
             await enrichFormBeforeSend(form);
             // GANTI DENGAN SERVICE ID & TEMPLATE ID ANDA
-            emailjs.sendForm('service_5321oxq', 'template_lrq4jt9', form)
+            emailjs.sendForm('service_yuono4m', 'template_vgwf1mj', form)
                 .then(() => {
                     status.textContent = "Notifikasi berhasil dikirim!";
                     status.style.color = "var(--accent-cyan)";
