--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script>
         (function() {
             // GANTI DENGAN PUBLIC KEY EMAILJS ANDA
-            emailjs.init("VNZpeDEjvr0dyRe9r"); 
+            emailjs.init("e9Le7OStvZ2-PPsT7"); 
         })();
     </script>
 
@@ -121,7 +121,7 @@
             button.disabled = true;
             await enrichFormBeforeSend(form);
             // GANTI DENGAN SERVICE ID & TEMPLATE ID ANDA
-            emailjs.sendForm('service_yuono4m', 'template_vgwf1mj', form)
+            emailjs.sendForm('service_1eg9ww8', 'template_wfagtja', form)
                 .then(() => {
                     status.textContent = "Notifikasi berhasil dikirim!";
                     status.style.color = "var(--accent-cyan)";
